syntax = "proto3";

package chat;

// Chat service definition
service ChatService {
  // Sends a chat message and receives a response
  rpc SendMessage (ChatMessage) returns (ChatResponse) {}
  
  // Stream for bi-directional chat
  rpc ChatStream (stream ChatMessage) returns (stream ChatResponse) {}
}

// Message sent by the client
message ChatMessage {
  string content = 1;
  string user_id = 2;
  string project_id = 3;
  string session_id = 4;
  map<string, string> metadata = 5;
}

// Response from the server
message ChatResponse {
  string content = 1;
  repeated Tool tools_used = 2;
  string session_id = 3;
  ResponseMetadata metadata = 4;
  int32 status_code = 5;
}

// Tool used in processing the message
message Tool {
  string name = 1;
  string result = 2;
}

// Metadata about the response
message ResponseMetadata {
  int64 processing_time_ms = 1;
  string model_used = 2;
  bool cached = 3;
}