syntax = "proto3";

package telegram;

// TelegramService for interacting with Telegram API
service TelegramService {
  // Send a message to a Telegram chat
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  
  // Get message templates by category
  rpc GetTemplates(TemplatesRequest) returns (TemplatesResponse);
  
  // Stream to receive messages from a chat
  rpc ReceiveMessages(ReceiveMessagesRequest) returns (stream TelegramMessage);
}

// Message request format
message SendMessageRequest {
  int64 chat_id = 1;
  string text = 2;
  optional string parse_mode = 3; // "Markdown" or "HTML"
  optional bool disable_notification = 4;
  optional int32 reply_to_message_id = 5;
}

// Response for SendMessage
message SendMessageResponse {
  int64 message_id = 1;
  int64 chat_id = 2;
  string status = 3; // "sent", "delivered", "read", "failed"
}

// Request for templates
message TemplatesRequest {
  optional string category = 1; // Filter by category
  optional string language = 2; // Filter by language
}

// Response with templates
message TemplatesResponse {
  repeated Template templates = 1;
}

// Template definition
message Template {
  string id = 1;
  string name = 2;
  string category = 3;
  string content = 4;
  map<string, string> variables = 5;
}

// Request for receiving messages
message ReceiveMessagesRequest {
  int64 chat_id = 1;
  optional int32 offset = 2;
  optional int32 limit = 3;
  optional int32 timeout = 4;
}

// User information
message User {
  int64 id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string username = 4;
}

// Message structure
message TelegramMessage {
  int64 message_id = 1;
  int64 chat_id = 2;
  User from = 3;
  int32 date = 4; // Unix time
  string text = 5;
  optional MessageEntity entity = 6;
}

// Entity within a message (like mentions, hashtags, etc)
message MessageEntity {
  string type = 1; // mention, hashtag, bot_command, url, etc
  int32 offset = 2;
  int32 length = 3;
  optional string url = 4;
  optional User user = 5;
}